--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,3 @@
-title: Gabrielle Chan
+title: Harry Hart
 description: Under Construction
 
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme
